Hotfix : work experiences issues on small screen

--- a/workExperience/workExperience.sass
+++ b/workExperience/workExperience.sass
@@ -340,6 +340,8 @@ body
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out
 
 @media screen and (max-width: 1000px)
+  #Stellantis, #military-reserve
+    padding: 50px 5% 50px 5%
   #workAssignment
     padding: 0
 
